Do not store CF_HTML header in QMimeData

QMimeData doesn't handle it.

Keep
"<html>\r\n<body>\r\n<!--StartFragment-->"
and
"<!--EndFragment-->\r\n</body>\r\n</html>"
tags because they are required for proper pasting of an HTML fragment on
Windows.

Fixes: QTBUG-100806
Task-number: QTBUG-92539
Change-Id: I9e8a2f9592e56b9acc011b7640e589c43b558543
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 91ef7c19f47a97a82a2f143c99dfd3b885d65729)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>